Merging in changes from trunk up to 65934 svn merge -r 61761:65934 https://source.sakaiproject.org/svn/kernel/trunk
git-svn-id: https://source.sakaiproject.org/svn/kernel@66083 66ffb92e-73f9-0310-93c1-f5514f145a0a